--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
-    <title>BlockFile</title>
+    <title>ETHERFILE | Your Smart Cloud Storage</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
